[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/items/enemy spawner.gd" type="Script" id=1]
[ext_resource path="res://resources/FX/flame_fx_webp.webp" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "spawning"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="enemy_spawner" type="Position2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -10.8762, -57.0911 )
scale = Vector2( 0.30669, 0.239806 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/normal = SubResource( 1 )
anims/spawning = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 0.600001, 0.600001 )
collision_layer = 8
collision_mask = 2
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -435.132, -397.866, -2632.43, -438.184, -2662.67, 418.563, -425.053, 438.721, -404.894, 3069.44, 401.455, 3039.2, 411.535, 428.642, 2679.39, 458.88, 2649.15, -357.549, 401.455, -418.025, 401.455, -2272.63, -435.132, -2272.63 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
